--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,14 +31,20 @@ dependencies {
     compile 'com.github.rey5137:material:1.2.4'             //material icon
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
-//
+
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     //Optional: see how to use the utility.
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
     //Optional: see how to use the utility.
     compile 'com.ogaclejapan.smarttablayout:utils-v13:1.6.1@aar'
-//
 
+    compile 'com.youth.banner:banner:1.4.2'  //最新版本          //图片轮播
+
+    compile 'com.mcxiaoke.volley:library:1.0.19'     //volley
+
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     testCompile 'junit:junit:4.12'
 
