--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.jakewharton.butterknife'
+
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "zdxh.finder"
         minSdkVersion 21
@@ -21,31 +22,51 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.jakewharton:butterknife:8.4.0'                         //butterknife
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'    //简化代码
-    compile 'com.github.rey5137:material:1.2.4'             //material icon
+    compile 'com.github.rey5137:material:1.2.4'
+    //material
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
-
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     //Optional: see how to use the utility.
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
     //Optional: see how to use the utility.
     compile 'com.ogaclejapan.smarttablayout:utils-v13:1.6.1@aar'
-
-    compile 'com.youth.banner:banner:1.4.2'  //最新版本          //图片轮播
-
-    compile 'com.mcxiaoke.volley:library:1.0.19'     //volley
-
+    compile 'com.youth.banner:banner:1.4.2'
+    //banner
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+    //volley
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
+    //u-i-l
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //glide
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.7.0'
+    //recyclerview
+    compile 'com.github.rubensousa:gravitysnaphelper:1.0'
+    //RecyclerViewSnap
+    compile 'com.github.florent37:materialtextfield:1.0.5'
+    //textfield
+
+
+    //Bmob的数据存储、文件等服务，以下是最新的bmob-sdk:
+    //3.5.0
+    compile 'cn.bmob.android:bmob-sdk:3.5.0'
+
+    //bmob-push：Bmob推送包
+    compile 'cn.bmob.android:bmob-push:0.8'
+
+    //bmob-im：Bmob即时通讯包，注意每个版本的im依赖特定版本的bmob-sdk，具体的依赖关系可查看下面注释[2]
+    compile 'cn.bmob.android:bmob-im:2.0.5@aar'
+    compile 'cn.bmob.android:bmob-sdk:3.4.7-aar'
+
 
     testCompile 'junit:junit:4.12'
+
+
 
 }
