--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,7 @@ dependencies {
     //material
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
-    //Optional: see how to use the utility.
-    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
-    //Optional: see how to use the utility.
-    compile 'com.ogaclejapan.smarttablayout:utils-v13:1.6.1@aar'
+
     compile 'com.youth.banner:banner:1.4.2'
     //banner
     compile 'com.mcxiaoke.volley:library:1.0.19'
@@ -49,9 +45,6 @@ dependencies {
     //recyclerview
     compile 'com.github.rubensousa:gravitysnaphelper:1.0'
     //RecyclerViewSnap
-    compile 'com.github.florent37:materialtextfield:1.0.5'
-    //textfield
-
 
     //Bmob的数据存储、文件等服务，以下是最新的bmob-sdk:
     //3.5.0
@@ -70,12 +63,11 @@ dependencies {
     compile "com.mikepenz:iconics-core:2.8.1@aar"
 
     //icon_font
-    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
-    //material icon font
+    compile 'com.mikepenz:ionicons-typeface:2.0.1.2@aar'
+    //ionicons icon font
 
+    compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
 
     testCompile 'junit:junit:4.12'
-
-
 
 }
